[metadata]
name = regexlint
description = Linter for (Pygments) regular expressions
long_description = file: README.rst
license = Apache
url = https://github.com/thatch/regexlint/
author = Tim Hatch
author_email = tim@timhatch.com
classifiers =
  License :: OSI Approved :: Apache Software License
  Intended Audience :: Developers
  Development Status :: 5 - Production/Stable
  Operating System :: OS Independent
  Topic :: Software Development :: Quality Assurance
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
keywords =

[options]
packages = regexlint
setup_requires =
    setuptools_scm
    setuptools >= 38.3.0
python_requires = >=3.6
install_requires =
    Pygments
tests_require =
  pytest

[isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = False
include_trailing_comma = True
use_parentheses = True

[flake8]
ignore = E203, E231, E266, E302, E501, W503, E741
max-line-length = 88

[options.entry_points]
console_scripts =
  regexlint=regexlint.cmdline:main
